--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -104,3 +104,14 @@ CONFIG_YAM=m
 CONFIG_KERNEL_LZMA=y
 ## end choice
 
+##
+## file: security/apparmor/Kconfig
+##
+# CONFIG_SECURITY_APPARMOR is not set
+
+##
+## file: security/tomoyo/Kconfig
+##
+# CONFIG_SECURITY_TOMOYO is not set
+
+
