--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2784,6 +2784,11 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 
 ##
+## file: drivers/staging/media/Kconfig
+##
+CONFIG_STAGING_MEDIA=y
+
+##
 ## file: drivers/staging/media/go7007/Kconfig
 ##
 # CONFIG_VIDEO_GO7007 is not set
